--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,29 @@
+# Build Stage
 FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+# Install dependencies for node-gyp (needed for some npm packages)
+RUN apk add --no-cache python3 make g++
+
+# Copy package files and install dependencies
 COPY package*.json ./
+RUN npm install
 
-RUN npm install && npm install -g @angular/cli
-
+# Copy rest of the source code
 COPY . .
 
-RUN npm run build --prod
+# Build the Angular app using local CLI
+RUN npx ng build --prod
 
+# Production Stage
 FROM nginx:alpine
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
-
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Copy built Angular files
 COPY --from=builder /app/dist/frontend /usr/share/nginx/html
 
 EXPOSE 80
-
-
 CMD ["nginx", "-g", "daemon off;"]
